--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 </head>
 <body>
 <header>
-	<h1>Your Name</h1>
-	<p>Web Developer | Software Engineer | Tech Enthusiast</p>
+	<h1>M S Aditya</h1>
+	<p>Tester | Software Engineer | Tech Enthusiast</p>
 </header>
 
 <section id="about">
