--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset = "UTF-8">
 	<meta name = "viewport" content = "width=device-width, initial-scale=1.0">
 	<title>Resume - M S Aditya</title>
-	<link rel = "stylesheet" href = "src/oldWay-PlainHTML/resume.css">
+	<link rel = "stylesheet" href = "./style.css">
 </head>
 <body>
 <div id = "root"></div>
