--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<meta charset = "UTF-8">
 	<meta name = "viewport" content = "width=device-width, initial-scale=1.0">
 	<title>Resume - M S Aditya</title>
-	<link rel = "stylesheet" href = "./styles.css">
+	<link rel = "stylesheet" href = "src/styles.css">
 </head>
 <body>
 <div id = "root"></div>
-<script src = "main.jsx" type = "module"></script>
+<script src = "/src/main.jsx" type = "module"></script>
 </body>
 </html>
 
